--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>タブ付きページ</title>
+    <title>ローカルウェーブ</title>
     {% load static %}
     <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
 <body>
     <header>
-        <h1>ウェブページのタイトル</h1>
+        <h1>ローカルウェーブ</h1>
     </header>
     <div class="tabs">
         <div class="tab-button" onclick="showTab('tab1', event)">タブ1</div>
